--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,7 @@
 html {
   font-family: var(--font-inter);
 }
+
+::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for Chrome, Safari, Opera */
+}
